# langchain

./: .env  pyproject.toml  requirements.txt
1_chat_models/: chat_remember.py
2_prompt_template/: starter.py
3_chains/: basics.py  sequential.py
4_rags/: first_part.py  last.py  part2_third_metadata.py  second.py  third_metadata.py
4_rags/db/chroma_db/: chroma.sqlite3
4_rags/db/chroma_db_with_metadata/: chroma.sqlite3
5_agents/: first.py
chains/: conditional.py  inner_working.py
chat_models/: chat_firebase.py  chat_model.py  chat_model_conver.py
